--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^5.6.2",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.1.2",
+    "cesium": "^1.66.0",
+    "craco-cesium": "^1.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "resium": "^1.10.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
     "start": "craco start",
@@ -32,15 +38,13 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^5.6.3",
-    "cesium": "^1.66.0",
-    "craco-cesium": "^1.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "jest-environment-enzyme": "^7.1.2",
+    "jest-enzyme": "^7.1.2",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-observable": "^1.2.0",
-    "resium": "^1.10.1",
-    "rxjs": "^6.5.4",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2"
+    "rxjs": "^6.5.4"
   }
 }
