--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "expect": "^25.1.0",
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
-    "react-hooks-testing-library": "^0.6.0",
+    "@testing-library/react-hooks": "^3.2.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
