--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "@types/enzyme": "^3.10.5",
     "@types/jest": "^25.1.4",
     "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "expect": "^25.1.0",
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
     "redux-observable": "^1.2.0",
