--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "react": "^17.0.1",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.1",
     "react-scripts": "^4.0.1",
     "semantic-ui-css": "^2.4.1",
